chore:added lato font to dropdowns, corrected buttons alignments

--- a/webapp/src/app/globals.css
+++ b/webapp/src/app/globals.css
@@ -2,17 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face{
-    font-family: "Sequel-Sans-Light-Body";
-    src: url('https://res.cloudinary.com/aniket98571/raw/upload/v1718084418/Sequel-Sans-_Light-Body-v2_imnbkt.ttf');
-    /*https://res.cloudinary.com/aniket98571/raw/upload/v1717580903/Sequel-Sans-Light-Body_d83yzy.ttf*/
-}
-@font-face {
-    font-family: "Sequel-Sans-Medium-Head";
-    src: url('https://res.cloudinary.com/aniket98571/raw/upload/v1718084418/Sequel-Sans-_Medium-_Head-v2_uzcvcq.ttf');
-    font-display: swap;
-    /*https://res.cloudinary.com/aniket98571/raw/upload/v1717580903/Sequel-Sans-Medium-Head_umakd5.ttf*/
-}
 @font-face {
     font-family: "Geist-SemiBold";
     src: url('https://res.cloudinary.com/aniket98571/raw/upload/v1715256918/Geist-SemiBold_h3w290.ttf');
@@ -104,7 +93,7 @@
         @apply flex flex-col gap-[50px] items-start lg:bg-[white] w-[170px] h-[250px] p-[30px_10px] lg:hover-bg-image drop-shadow-xl box-border;
     }
     .link-with-image .staking-block div:nth-child(3){
-        @apply font-medium text-[black] text-[16px] font-Sequel-Sans-Medium-Head;
+        @apply font-medium text-[black] text-[16px] lato-bold;
     }
     .link-with-image .staking-block div:nth-child(4){
         @apply text-[11px] font-Geist-SemiBold text-footer-text;
